--- a/over-kim.html
+++ b/over-kim.html
@@ -1,120 +1,130 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Nomnivore</title>
-</head>
-<body>
-<!-- Navigation bar -->
-<nav class="row container-fluid">
-    <div class="col-12 nav-background">
-        <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
-        <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link text-white" href="index.html"><p>Home</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link current-link" href="over-kim.html"><p>Over Kim</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
-            </li>
-            </ul>
-        </div>
-    </div>
-    </div>
-</nav>
-<!-- Hero section -->
-<section>
-    <div class="container-fluid hero-image">
-        <div class="row align-items-center">
-            <div class="col">
-                <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
-                <div class="profile-pic"></div>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+      <title>Nomnivore</title>
+   </head>
+   <body>
+      <!-- Navigation bar -->
+      <nav class="row container-fluid">
+         <div class="col-12 nav-background">
+            <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
+            <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+               <a class="navbar-brand text-white" href="index.html">
+                  <h1>Nomnivore</h1>
+               </a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">
+                           <p>Home</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="recepten.html">
+                           <p>Recepten</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link current-link" href="over-kim.html">
+                           <p>Over Kim</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="contact.html">
+                           <p>Contact</p>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
             </div>
-        </div>
-    </div>
-</section>
-<!-- main content section -->
-<section>
-    <div class="container">
-        <div class="row justify-content-center">  
-            <div class="col-lg-8">
-                <div class="col-md-12 text-block-over-kim">
-                    <h2>Over mijn ervaring en opleiding</h2>
-                    <p>
+         </div>
+      </nav>
+      <!-- Hero section -->
+      <section>
+         <div class="container-fluid hero-image">
+            <div class="row align-items-center">
+               <div class="col">
+                  <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
+                  <div class="profile-pic"></div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- main content section -->
+      <section>
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-lg-8">
+                  <div class="col-md-12 text-block-over-kim">
+                     <h2>Over mijn ervaring en opleiding</h2>
+                     <p>
                         Ik heb mijn patisserie opleiding gedaan bij Culinair Centrum Beverwijk. Eerst een jaar basispatisserie en daarna de "next level" opleiding.
                         Deze laatste opleiding wordt gegeven door Jeroen Goossens, de huispatissier van het koninklijk huis.
                         Hier heb ik enorm veel geleerd.
-                    </p>
-                    <p>
+                     </p>
+                     <p>
                         Als zelfstandig ondernemer heb ik een catering bedrijf gehad. Dit was een broodjes bezorg service.
                         Het runnen van mijn eigen bedrijf heeft mij enorm veel ervaring opgeleverd.
-                    </p>
-                    <p>
+                     </p>
+                     <p>
                         Ik ben verder een enorme natuur liefhebber en heb sinds kort zelf een collectie zeldzame rupsen.
                         Deze transformeren zichzelf tot prachtige vlinders. Vergelijkbaar met het dessert wat je op deze pagina kan bewonderen.
-                    </p>
-                </div>
-            </div> 
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col over-kim-background">
+                     </p>
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-</section>
-<!-- footer section -->
-<footer class="container-fluid fixed-bottom">
-    <div class="row footer-background">
-        <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
-        <div class="col-xs-auto">
-            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
-            <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/Nomnivore-105839921382834"
-              >
-                <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
-              >
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <span class="sr-only">Linkedin</span>
-              </a>
-            </li>
-            </ul>
-        </div>
-    </div>
-</footer>
-<script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
+         </div>
+         <div class="container-fluid">
+            <div class="row">
+               <div class="col over-kim-background">
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- footer section -->
+      <footer class="container-fluid fixed-bottom">
+         <div class="row footer-background">
+            <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
+            <div class="col-xs-auto">
+               <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
+               <ul class="list-inline social-links">
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.facebook.com/Nomnivore-105839921382834"
+                        >
+                     <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
+                     <span class="sr-only">Facebook</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
+                     <i class="fa fa-instagram" aria-hidden="true"></i>
+                     <span class="sr-only">Instagram</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
+                        >
+                     <i class="fa fa-linkedin" aria-hidden="true"></i>
+                     <span class="sr-only">Linkedin</span>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </footer>
+      <script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+   </body>
 </html>
