--- a/contact.html
+++ b/contact.html
@@ -1,167 +1,176 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Nomnivore</title>
-</head>
-<body>
-<!-- Navigation bar -->
-<nav class="row container-fluid">
-    <div class="col-12 nav-background">
-        <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
-        <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link text-white" href="index.html"><p>Home</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link current-link" href="contact.html"><p>Contact</p></a>
-            </li>
-            </ul>
-        </div>     
-    </div>
-    </div>
-</nav>
-<!-- main content section -->
-<!-- social title -->
-<div class="container text-center">
-    <div class="row justify-content-center">
-        <div class="col-md-8 contact-title">
-            <h1>Kies de wijze van contact opnemen die uw voorkeur heeft:</h1>
-        </div>
-    </div>
-<!-- social icons -->
-    <div class="row">
-        <div class="col">
-            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
-            <ul class="list-inline social-contact">
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/Nomnivore-105839921382834"
-              >
-                <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
-              >
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <span class="sr-only">Linkedin</span>
-              </a>
-            </li>
-            </ul>
-        </div>
-    </div>
-<!-- telephone number -->
-    <div class="row">
-        <div class="col-12">
-                <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a>
-        </div>
-<!-- profile pic -->
-        <div class="col-12 profile-pic-contact"></div>
-    </div>
-</div>
-<!-- contact form -->
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="col-12 contact-form">
-            <form>
-                <label for="name">Uw naam:</label><br>
-                <input type="text" id="fname" name="fname"  required><br>
-                <label for="lname">Uw email:</label><br>
-                <input type="email" id="email" name="email"  required><br>
-                <label for="name">Korte omschrijving van uw vraag.</label><br>
-                <textarea id="message" name="message"  required></textarea><br><br>
-                <input type="submit" value="verzenden" class="send-button">
-            </form>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+      <title>Nomnivore</title>
+   </head>
+   <body>
+      <!-- Navigation bar -->
+      <nav class="row container-fluid">
+         <div class="col-12 nav-background">
+            <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
+            <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+               <a class="navbar-brand text-white" href="index.html">
+                  <h1>Nomnivore</h1>
+               </a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">
+                           <p>Home</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="recepten.html">
+                           <p>Recepten</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-white" href="over-kim.html">
+                           <p>Over Kim</p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link current-link" href="contact.html">
+                           <p>Contact</p>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
             </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="col-12 text-center">
-                <p class="contact-info">
-                    Kimberley van Leeuwen<br>
-                    Dekkerstraat 31<br>
-                    1944VA Beverwijk<br>
-                    kvk 60639393<br>
-                    <a class="email" href="mailto:kim@nomnivore.nl?subject=Contact met freelance kok Kim">kim@nomnivore.nl</a><br>
-                    <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a><br>
-                </p>
+         </div>
+      </nav>
+      <!-- main content section -->
+      <!-- social title -->
+      <div class="container text-center">
+         <div class="row justify-content-center">
+            <div class="col-md-8 contact-title">
+               <h1>Kies de wijze van contact opnemen die uw voorkeur heeft:</h1>
             </div>
-        </div>
-    </div>
-</div>
-<!-- social background -->
-<div class="container-fluid">
-        <div class="row">
+         </div>
+         <!-- social icons -->
+         <div class="row">
+            <div class="col">
+               <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
+               <ul class="list-inline social-contact">
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.facebook.com/Nomnivore-105839921382834"
+                        >
+                     <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
+                     <span class="sr-only">Facebook</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
+                     <i class="fa fa-instagram" aria-hidden="true"></i>
+                     <span class="sr-only">Instagram</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
+                        >
+                     <i class="fa fa-linkedin" aria-hidden="true"></i>
+                     <span class="sr-only">Linkedin</span>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+         <!-- telephone number -->
+         <div class="row">
+            <div class="col-12">
+               <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a>
+            </div>
+            <!-- profile pic -->
+            <div class="col-12 profile-pic-contact"></div>
+         </div>
+      </div>
+      <!-- contact form -->
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-md-8">
+               <div class="col-12 contact-form">
+                  <form>
+                     <label for="name">Uw naam:</label><br>
+                     <input type="text" id="fname" name="fname"  required><br>
+                     <label for="lname">Uw email:</label><br>
+                     <input type="email" id="email" name="email"  required><br>
+                     <label for="name">Korte omschrijving van uw vraag.</label><br>
+                     <textarea id="message" name="message"  required></textarea><br><br>
+                     <input type="submit" value="verzenden" class="send-button">
+                  </form>
+               </div>
+            </div>
+         </div>
+         <div class="row justify-content-center">
+            <div class="col-md-8">
+               <div class="col-12 text-center">
+                  <p class="contact-info">
+                     Kimberley van Leeuwen<br>
+                     Dekkerstraat 31<br>
+                     1944VA Beverwijk<br>
+                     kvk 60639393<br>
+                     <a class="email" href="mailto:kim@nomnivore.nl?subject=Contact met freelance kok Kim">kim@nomnivore.nl</a><br>
+                     <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a><br>
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- social background -->
+      <div class="container-fluid">
+         <div class="row">
             <div class="col contact-background">
             </div>
-        </div>
-</div>
-
-<!-- footer section -->
-<footer class="container-fluid fixed-bottom">
-    <div class="row footer-background">
-        <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
-        <div class="col-xs-auto">
-            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
-            <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/Nomnivore-105839921382834"
-              >
-                <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
-              >
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <span class="sr-only">Linkedin</span>
-              </a>
-            </li>
-            </ul>
-        </div>
-    </div>
-</footer>
-<script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
+         </div>
+      </div>
+      <!-- footer section -->
+      <footer class="container-fluid fixed-bottom">
+         <div class="row footer-background">
+            <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
+            <div class="col-xs-auto">
+               <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
+               <ul class="list-inline social-links">
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.facebook.com/Nomnivore-105839921382834"
+                        >
+                     <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
+                     <span class="sr-only">Facebook</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
+                     <i class="fa fa-instagram" aria-hidden="true"></i>
+                     <span class="sr-only">Instagram</span>
+                     </a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a
+                        target="_blank"
+                        href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
+                        >
+                     <i class="fa fa-linkedin" aria-hidden="true"></i>
+                     <span class="sr-only">Linkedin</span>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </footer>
+      <script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+   </body>
 </html>
