Converted pictures to webp for faster load times.

--- a/recepten.html
+++ b/recepten.html
@@ -73,7 +73,7 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4">
-                           <img src="assets/images/choco-bombes.png" class="img-fluid" alt="chocolade bombes">
+                           <img src="assets/images/choco-bombes.webp" class="img-fluid" alt="chocolade bombes">
                         </div>
                         <div class="col-md-8 ingredients">
                            <div class="row">
@@ -157,7 +157,7 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4">
-                           <img src="assets/images/verjaardags-taart.png" class="img-fluid" alt="chocolade bombes">
+                           <img src="assets/images/verjaardags-taart.webp" class="img-fluid" alt="chocolade bombes">
                         </div>
                         <div class="col-md-8 ingredients">
                            <div class="row">
@@ -231,7 +231,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-4">
-                        <img src="assets/images/bonbons.png" class="img-fluid" alt="bonbons">
+                        <img src="assets/images/bonbons.webp" class="img-fluid" alt="bonbons">
                      </div>
                      <div class="col-md-8 ingredients">
                         <div class="row">
